# linform

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_assets.py
app/: main.py  prestart.py
app/core/: auth.py  config.py  db.py
app/models/: database.py  schemas.py
app/routers/: assets.py  assistant.py  render.py  templates.py
app/services/: assets.py  assistant.py  assistant_prompt.py  barcodes.py  renderer.py  template_engine.py  versioning.py
examples/: README.md  certificate.data.json  certificate.html  invoice.data.json  invoice.html  shipping_label.data.json  shipping_label.html
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  layout.test.ts  layout.ts  styles.css
frontend/src/assistant/: extract.test.ts  extract.ts  image.test.ts  image.ts  markdown.test.ts  markdown.ts
frontend/src/components/: AssetsPanel.tsx  AssistantPanel.tsx  Editor.tsx  PlaceholderPanel.tsx  PresetDialog.tsx  PresetPanel.tsx  PreviewPane.tsx  TemplateList.tsx  VersionHistory.tsx  VisualEditor.tsx
frontend/src/docx/: clean-paste.test.ts  clean-paste.ts  import.ts  mammoth.d.ts
frontend/src/editor/: CanvasEditor.tsx  ColorControl.tsx  blocks.ts  color.test.ts  color.ts  (+13 more)
tests/: conftest.py  test_assets_api.py  test_assistant_api.py  test_auth.py  test_barcodes.py  test_render_api.py  test_template_engine.py  test_versioning_api.py
(+11 files in other folders)
