[project]
name = "linform"
version = "0.1.0"
description = "Self-hosted print form service: versioned HTML templates in, PDF out"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "weasyprint>=61",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    # Symbols are drawn here from payload data. Both are pure Python with no
    # system libraries, so the container stays as light as WeasyPrint left it.
    "segno>=1.6",
    "python-barcode>=0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pypdf>=4.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
